.kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved.yml -o .kubernetes
    kompose.image-pull-policy: Never
    kompose.service.type: LoadBalancer
    kompose.version: 1.31.2 (a92241f79)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved.yml -o .kubernetes
        kompose.image-pull-policy: Never
        kompose.service.type: LoadBalancer
        kompose.version: 1.31.2 (a92241f79)
      labels:
        io.kompose.network/bingoblitz-bingoblitz-network: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - image: frontend
          imagePullPolicy: Never
          name: frontend
          ports:
            - containerPort: 4000
              protocol: TCP
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
      restartPolicy: Always
status: {}
