.kubernetes/gameserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml -o .kubernetes
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: gameserver
  name: gameserver
spec:
  ports:
    - name: "4001"
      port: 4001
      targetPort: 80
  selector:
    io.kompose.service: gameserver
status:
  loadBalancer: {}
