.kubernetes/gameservice-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose-resolved.yml -o .kubernetes
    kompose.image-pull-policy: Never
    kompose.service.type: LoadBalancer
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: gameservice-tcp
  name: gameservice-tcp
spec:
  ports:
    - name: "4003"
      port: 4003
      targetPort: 80
  selector:
    io.kompose.service: gameservice
  type: LoadBalancer
status:
  loadBalancer: {}
